use faster script/stylesheet cdn

--- a/www/index.html
+++ b/www/index.html
@@ -263,7 +263,7 @@
     border-color: rgba(200, 70, 100, 0.5);
   }
   </style>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" async>
+  <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container">
@@ -588,7 +588,7 @@ THE SOFTWARE.
       </div>
     </div>
   </div>
-  <script src="//zeptojs.com/zepto.min.js"></script>
+  <script src="//cdn.bootcss.com/zepto/1.1.6/zepto.min.js"></script>
   <script src="./hasher.js"></script>
   <script type="text/javascript">
 
