refine READMe and support Node 0.10.0

--- a/www/index.html
+++ b/www/index.html
@@ -363,7 +363,7 @@
             欢迎您参与到本项目的使用和开发。
           </p>
         </section>
-        <section class="section-license">
+        <section class="section-license" style="display: none">
           <h2>
             开源许可证
           </h2>
@@ -555,6 +555,9 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 </pre>
           </div>
+        </section>
+        <section>
+          
         </section>
       </div>
     </div>
