--- a/index.html
+++ b/index.html
@@ -363,6 +363,16 @@
             欢迎您参与到本项目的使用和开发。
           </p>
         </section>
+        <section>
+          <!-- Disqus -->
+          <div class="disqus">
+            <div id="disqus_thread"></div>
+            <script type="text/javascript" src="/scripts/disqus.js"></script>
+            <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            <a href="//disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+          </div>
+          <!-- END Disqus -->
+        </section>
       </div>
     </div>
     <div class="footer hero">
