--- a/index.html
+++ b/index.html
@@ -353,9 +353,7 @@
             这边使用 JavaScript 实现了服务器的哈希函数，也避免了用户提交的用户名和密码被传输给服务器，
             服务器只要根据提交的 k 个 64 位元无符号整数查询内存中对应的位置，如果这些位置都为 1，
             用户输入的账户信息就很有可能出现在社工库中；如果 k 个位置中任何一个位置为 0 则输入的邮箱和密码并未出现在库中。
-          </p>
-          <p>
-            (建议您 <a target="_blank" href="#viewsource">查看网页源代码</a> 进行确认)
+            (<a target="_blank" href="#viewsource">查看网页源代码</a>)
           </p>
           <p>
             Bloom Filter 索引查询有一定的误正率 (False Positive) 也就是体检的时候所说的「假阳性率」。
