--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             但您输入的数据一旦被判定为「不存在」是可以确定您输入的数据不存在于库中。
           </p>
           <p>
-            本项目源代码托管在
+            最后，本项目源代码托管在
             <a target="_blank" href="https://github.com/kirisetsz/52g"><i class="fa fa-github-alt"></i> GitHub</a>。
             欢迎参与到本项目的使用和开发。
           </p>
